; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/atlx/extr_atl2.c_atl2_write_pci_cfg.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/atlx/extr_atl2.c_atl2_write_pci_cfg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.atl2_hw = type { %struct.atl2_adapter* }
%struct.atl2_adapter = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.atl2_hw*, i32, i32*)* @atl2_write_pci_cfg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @atl2_write_pci_cfg(%struct.atl2_hw* %0, i32 %1, i32* %2) #0 {
  %4 = alloca %struct.atl2_hw*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca %struct.atl2_adapter*, align 8
  store %struct.atl2_hw* %0, %struct.atl2_hw** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %8 = load %struct.atl2_hw*, %struct.atl2_hw** %4, align 8
  %9 = getelementptr inbounds %struct.atl2_hw, %struct.atl2_hw* %8, i32 0, i32 0
  %10 = load %struct.atl2_adapter*, %struct.atl2_adapter** %9, align 8
  store %struct.atl2_adapter* %10, %struct.atl2_adapter** %7, align 8
  %11 = load %struct.atl2_adapter*, %struct.atl2_adapter** %7, align 8
  %12 = getelementptr inbounds %struct.atl2_adapter, %struct.atl2_adapter* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* %5, align 4
  %15 = load i32*, i32** %6, align 8
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @pci_write_config_word(i32 %13, i32 %14, i32 %16)
  ret void
}

declare dso_local i32 @pci_write_config_word(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
